# rustvcf

./: .gitignore  Cargo.toml  README.md
src/: benchmark.rs  main.rs  validate.rs
