[package]
name = "rustvcf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgzip = "0.3.1"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.1"
log = "0.4.27"
vcf = "0.6.1"
